# rust-axum-backend

./: .gitignore  Cargo.toml  README.md
migrations/: 20241212082251_users.down.sql  20241212082251_users.up.sql
src/: config.rs
src/models/: user.rs
